NOCC 0.9.4	??   ??, 2001

	* Fixed problem with ip address in send.php on Win32 (bug #415180)
	* Fixed attachments problem when running on Windows (bug #414497)
	* Fixed a problem with IE and SSL which prevented from downloading
	  attachments.
	* Fixed missing '\r' when sending mail (bug #408232).
	* Added Slovak, Hungarian and (still experimental) Hebrew translations.
	* Added an error reporting control. No more 'undefined variable'
	  warning will appear.
	* Added a new theme 'newlook' from Anton Jakimov <t0xa@ls2.lv>
	* Images are now in theme folder.
	* Added support for multiple domain/server.
	* Messages are now sent with the charset set in the header. The charset
	  set is the one of the chosen language.


NOCC 0.9.3pl1	March 18, 2001

	* Fixed loosing charset preference after deleting an attachment.
        * Minor bugfixes: typo in CREDITS, missing variables in language files,
          corrupted russian language file (Unix encoding).


NOCC 0.9.3	March 12, 2001

	* Fixed a bug with Postfix when "strict_rfc821_envelopes = yes".
	* Fixed replying to someone with a name containing accent (bug #133573).
	* Better display of text/plain messages.
	* Fixed bug with Netscape 4.x which prevented to send attachement.
	* HTML code is now XHTML 1.0 Transitional compliant.
	  (NB: nl2br() is not XHTML compliant when using PHP < 4.0.5)
	* Added support for themes.
	* Added navigation between messages.
	* If sender is empty, NOCC displays '[unknown]'.
	* Added Russian (Win, Unix & ISO), Slovenian, Swedish, Danish, Polish
	  and Taiwan Chinese translations.
	* Fix for flawed PHP install bundled with RedHat 7 (RH bug #24933).
	* Images with transparency are now in GIF. Fixes Netscape problems
	  with transparent PNG.
	* Moved <? to <?php, better compatibility when short tags are disabled. 


NOCC 0.9.2	February 08, 2001
	
	* now handle multiple attachments when sending message (adding and
	  deleting attachments is now possible).