@@ -52,7 +52,7 @@
 							{	
 								$totalsize += $attach_array[$i]->file_size;
 								$att_name = imap_mime_header_decode($attach_array[$i]->file_name);
-								echo ("<tr><td class=\"inbox\">\n<input type=\"hidden\" name=\"send_att$i\" value=\"".imap_8bit($att_name[0]->text)."\" />\n<input type=\"hidden\" name=\"send_att_tmp$i\" value=\"".$attach_array[$i]->tmp_file."\" />\n<input type=\"hidden\" name=\"send_att_size$i\" value=\"".$attach_array[$i]->file_size."\" />\n<input type=\"hidden\" name=\"send_att_mime$i\" value=\"".$attach_array[$i]->file_mime."\" />\n<input type=\"checkbox\" name=\"file$i\" value=\"file$i\" /></td><td class=\"inbox\">".htmlentities($att_name[0]->text)."</td><td class=\"inbox\">".$attach_array[$i]->file_size."</td></tr>");
+								echo ("<tr><td class=\"inbox\">\n<input type=\"checkbox\" name=\"file$i\" /></td><td class=\"inbox\">".htmlentities($att_name[0]->text)."</td><td class=\"inbox\">".$attach_array[$i]->file_size."</td></tr>");//echo ("<tr><td class=\"inbox\">\n<input type=\"hidden\" name=\"send_att$i\" value=\"".imap_8bit($att_name[0]->text)."\" />\n<input type=\"hidden\" name=\"send_att_tmp$i\" value=\"".$attach_array[$i]->tmp_file."\" />\n<input type=\"hidden\" name=\"send_att_size$i\" value=\"".$attach_array[$i]->file_size."\" />\n<input type=\"hidden\" name=\"send_att_mime$i\" value=\"".$attach_array[$i]->file_mime."\" />\n<input type=\"checkbox\" name=\"file$i\" value=\"file$i\" /></td><td class=\"inbox\">".htmlentities($att_name[0]->text)."</td><td class=\"inbox\">".$attach_array[$i]->file_size."</td></tr>");
 							}
 							echo ("<tr><td colspan=\"2\"><input type=\"button\" class=\"button\" onclick=\"delete_attach()\" value=\"$html_attach_delete\" /></td><td class=\"inbox\"><b>$html_totalsize : $totalsize $html_bytes</b></td></tr></table>");
 						}
